@@ -182,10 +182,10 @@ static Fl_Fontdesc built_in_table_PS[] = { // PostScript font names preferred wh
 {"Arial-BoldMT"},
 {"Arial-ItalicMT"},
 {"Arial-BoldItalicMT"},
-{"CourierNewPSMT"},
-{"CourierNewPS-BoldMT"},
-{"CourierNewPS-ItalicMT"},
-{"CourierNewPS-BoldItalicMT"},
+{"Courier"},
+{"Courier-Bold"},
+{"Courier-Oblique"},
+{"Courier-BoldOblique"},
 {"TimesNewRomanPSMT"},
 {"TimesNewRomanPS-BoldMT"},
 {"TimesNewRomanPS-ItalicMT"},
@@ -202,8 +202,8 @@ static Fl_Fontdesc built_in_table_full[] = { // full font names used before 10.5
   {"Arial Bold"},
   {"Arial Italic"},
   {"Arial Bold Italic"},
-  {"Courier New"},
-  {"Courier New Bold"},
+  {"Courier"},
+  {"Courier Bold"},
   {"Courier New Italic"},
   {"Courier New Bold Italic"},
   {"Times New Roman"},
